ajax testing + progress #3

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -130,7 +130,7 @@
           "libSass": true,
           "compass": false,
           "fullCompass": false,
-          "outputStyle": "expanded",
+          "outputStyle": "nested",
           "customOutput": true,
           "imported": false,
           "parents": [],
@@ -219,7 +219,7 @@
           "name": "jquery.js",
           "category": "JS",
           "autoCompile": true,
-          "uglify": true,
+          "uglify": false,
           "mangle": true,
           "babel": false,
           "sourceMaps": false,
@@ -282,10 +282,10 @@
           "output": "dist/images/cta.png",
           "name": "cta.png",
           "category": "IMAGE",
-          "size": 818756,
+          "size": 817568,
           "type": "png",
           "initialSize": 818756,
-          "optimized": false,
+          "optimized": true,
           "height": 0,
           "width": 0
         },
@@ -321,6 +321,17 @@
             "9dd78334"
           ],
           "type": "sass"
+        },
+        "deaf7018": {
+          "id": "deaf7018",
+          "path": "src/booking.html",
+          "output": "src/booking.html",
+          "name": "booking.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
@@ -341,7 +352,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enable": true
         },
         "deployment": {
           "ftpHost": "",
