slow progress on main page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -115,15 +115,17 @@
     {
       "path": "src/style.scss",
       "imports": [
-        "src/sass/hero.scss",
-        "src/sass/offers.scss",
-        "src/sass/nav.scss",
-        "src/sass/features.scss"
+        "src/sass/_mixins.scss",
+        "src/sass/_hero.scss",
+        "src/sass/_offers.scss",
+        "src/sass/_nav.scss",
+        "src/sass/_features.scss",
+        "src/sass/_cta.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "settings"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
